--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1,6 +1,6 @@
-$font-stack: 
+$header: 'Sarabun', sans-serif
+$paragraph: 'Roboto', sans-serif 
 $footer: #212121
-
 
 html, body
     margin: 0
@@ -8,7 +8,41 @@ html, body
     flex-direction: column
 header
     height: 100vh
+    background-image: linear-gradient(#23811B, #202F4F)
 
 footer
-    background-color: 
+    background-color: $footer
     align-content: flex-end
+
+h1
+    font-family: $header
+p
+    font-family: $paragraph
+    margin: 0
+    padding: 0
+
+nav
+    background-color: red
+    display: flex
+    position: fixed
+    width: 100vw
+    justify-content: space-between
+    height: 10vh
+    align-items: center
+    
+    ul
+        list-style-type: none
+        margin: 0
+        padding: 0
+        overflow: hidden
+        background-color: yellow
+        padding: 0 1rem
+        height: 10vh
+        display: flex
+        flex-direction: columns
+        align-items: center
+        li
+            background-color: orange
+            float: left
+            padding: 0.5rem 0.8rem
+            margin: 0 1rem
