--- a/sass/style.sass
+++ b/sass/style.sass
@@ -3,6 +3,15 @@ $roboto: 'Roboto', sans-serif
 $footer: #212121
 $footer-font-color: #ffffff
 
+
+@function calculateRem($size)
+  $remSize: $size / 16px
+  @return #{$remSize}rem
+
+@mixin fontSize($size) 
+  font-size: $size //Fallback in px
+  font-size: calculateRem($size)
+
 html, body
     margin: 0
     display: flex
@@ -18,29 +27,36 @@ footer
     font-family: $sarabun
     text-align: center
     font-weight: 200
-    h3
+    h4
         display: inline
-    img
-        width: 50px
-        height: 40px
+    .img-facebook
+        width: 35px
+        height: 23px
+        vertical-align: middle
+    .img-instagram
+        width: 36px
+        height: 27px
         vertical-align: middle
     .title-box
         display: flex
-        algin-items: center
+        align-items: center
         justify-content: center
         padding: 10px
     ul
         list-style-type: none
     address
         font-style: normal
+        @include fontSize(12px)
     .link
         color: inherit
     .designer
         color: #D1D1D1
+        @include fontSize(12px)
     .copywrite
         color: #D8D8D8
         font-style: normal
         font-weight: 200
+        @include fontSize(10px)
 
 
 .sarabun
