--- a/sass/style.sass
+++ b/sass/style.sass
@@ -61,6 +61,15 @@ footer
 
 .sarabun
     font-family: $sarabun
+.sarabun200
+    font-family: $sarabun
+    font-weight: 200
+.sarabun500
+    font-family: $sarabun
+    font-weight: 500
+.sarabun800
+    font-family: $sarabun
+    font-weight: 800
 
 .roboto
     font-family: $roboto
@@ -73,27 +82,43 @@ p
     padding: 0
 
 nav
-    background-color: red
+    background-color: transparent
     display: flex
     position: fixed
     width: 100vw
     justify-content: space-between
     height: 10vh
     align-items: center
-    
+    color: #fff
+
+    h1
+        padding-left: 5vw
+        font-size: 2rem
+
+    a
+        text-decoration: none
+        color: inherit    
     ul
+        background-color: transparent
         list-style-type: none
         margin: 0
         padding: 0
         overflow: hidden
-        background-color: yellow
+        font-size: 1.1rem
         padding: 0 1rem
         height: 10vh
         display: flex
         flex-direction: columns
         align-items: center
         li
-            background-color: orange
+            background-color: transparent
             float: left
-            padding: 0.5rem 0.8rem
+            padding: 0.8rem 1rem
             margin: 0 1rem
+
+header
+    #logo
+        position: absolute
+        top: 30%
+        left: 50%
+        width: 30%
