--- a/sass/style.sass
+++ b/sass/style.sass
@@ -16,6 +16,7 @@ html, body
     margin: 0
     display: flex
     flex-direction: column
+    font-family: $roboto
 header
     height: 100vh
     background-image: linear-gradient(#23811B, #202F4F)
@@ -122,3 +123,16 @@ header
         top: 30%
         left: 50%
         width: 30%
+
+section 
+    h2
+        margin: 0
+#about
+    background-image: linear-gradient(#202F4F, #3EA5AC)
+    height: 20vh
+    display: flex
+    padding: 10vw
+    color: #fff
+
+    img
+        width: 25rem
