moved rem calculator

--- a/sass/_base.sass
+++ b/sass/_base.sass
@@ -1,2 +1,10 @@
 $sarabun: 'Sarabun', sans-serif
 $roboto: 'Roboto', sans-serif 
+
+@function calculateRem($size)
+  $remSize: $size / 16px
+  @return #{$remSize}rem
+
+@mixin fontSize($size) 
+  font-size: $size //Fallback in px
+  font-size: calculateRem($size)
