--- a/sass/_main.sass
+++ b/sass/_main.sass
@@ -1,6 +1,9 @@
+
 section 
     h2
         margin: 0
+        display: flex
+
 #about
     background-image: linear-gradient(#202F4F, #3EA5AC)
     height: 20vh
@@ -10,3 +13,26 @@ section
 
     img
         width: 25rem
+
+#sponsors
+    color: #fff
+    padding: 0 10vw
+    display: flex
+    flex-direction: column
+    background-image: linear-gradient(#FC7070, #BB3E37)
+    height: 50vh
+    div
+        display: flex
+        flex-direction: column
+#medals
+    display: flex
+    justify-content: space-evenly
+    align-content: center
+    div
+        display: flex
+        flex-direction: column
+        align-items: center
+        .medal
+            width: 25%
+        .sponsor
+            width: 150%
