--- a/sass/_main.sass
+++ b/sass/_main.sass
@@ -1,5 +1,6 @@
-
+@import "base"
 section 
+    padding: 5rem 10vw
     h2
         margin: 0
         display: flex
@@ -13,6 +14,44 @@ section
 
     img
         width: 25rem
+
+#faq
+    background-image: linear-gradient(#3EA5AC, #588C5D)
+
+#lastYear
+    padding: 5rem 10vw
+    display: flex
+    flex-direction: column
+    color: #fff
+    background-image: linear-gradient(#588C5D, #FC7070)
+    article
+        margin-top: 2rem
+        margin-bottom: 2rem
+    div
+        display: flex
+        flex-direction: row
+        justify-content: center
+    img
+        width: 20rem
+    button
+        background: rgba(58, 224, 136, 0.8)
+        border: 2px solid #A2FBCC
+        box-sizing: border-box
+        box-shadow: 0px 0px 4px #A2FBCC
+        border-radius: 15px
+        color: #fff
+        font-family: $sarabun
+        font-weight: bold
+        width: 10%
+        height: 2rem
+    button:focus
+        outline: none
+        box-shadow: none
+    #awesome
+        color: #fff
+    #title
+        color: rgba(58, 224, 136, 0.8)
+        text-shadow: 0px 4px 6px rgba(0, 0, 0, 0.2)
 
 #sponsors
     color: #fff
