--- a/sass/_main.sass
+++ b/sass/_main.sass
@@ -17,9 +17,36 @@ section
 
 #faq
     background-image: linear-gradient(#3EA5AC, #588C5D)
+    display: flex
+    flex-direction: column
+    #row
+        display: flex
+        flex-direction: row
+        justify-content: center
+    #card
+        display: flex
+        flex-direction: column
+        width: 30rem
+        background: #fff
+        box-shadow: 4px 4px 20px rgba(0, 0, 0, 0.25)
+        border-radius: 10px
+        margin: 1rem 1rem
+        padding: 2rem 2rem
+        text-align: center
+        color: #606060
+        h4
+            font-weight: 900
+            font-style: normal
+        #conduct
+            color: #3AE088
+    img
+        align-self: center
+    #line
+        margin-top: auto
+
+
 
 #lastYear
-    padding: 5rem 10vw
     display: flex
     flex-direction: column
     color: #fff
@@ -55,11 +82,9 @@ section
 
 #sponsors
     color: #fff
-    padding: 0 10vw
     display: flex
     flex-direction: column
     background-image: linear-gradient(#FC7070, #BB3E37)
-    height: 50vh
     div
         display: flex
         flex-direction: column
