--- a/sass/_main.sass
+++ b/sass/_main.sass
@@ -42,6 +42,8 @@ section
     img
         align-self: center
     #line
+        margin-top: 1rem
+    #bottom-anchor
         margin-top: auto
 
 
