--- a/sass/_main.sass
+++ b/sass/_main.sass
@@ -19,6 +19,8 @@ section
     background-image: linear-gradient(#3EA5AC, #588C5D)
     display: flex
     flex-direction: column
+    h2
+        color: #182E7C
     #row
         display: flex
         flex-direction: row
@@ -41,6 +43,10 @@ section
             color: #3AE088
     img
         align-self: center
+    #titleLine
+        align-self: flex-start
+        margin-top: 1rem
+        margin-bottom: 2rem
     #line
         margin-top: 1rem
     #bottom-anchor
