--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,7 @@ body {
 
 /* header */
 header {
-  height: 100vh;
+  min-height: 100vh;
 	background-image: linear-gradient(#236A5F, #263A5E);
 	display: flex;
 	align-items: center;
@@ -110,4 +110,24 @@ nav a {
 
 nav .fa {
 	font-size: 1.4em;
+}
+
+@media only screen and (max-width: 800px) {
+	header > .container {
+		grid-template-columns: none;
+		grid-template-rows: auto auto;
+		text-align: center;
+		padding: 1em 0 4em 0;
+	}
+
+	header .buttons {
+		padding: 0 1em;
+		grid-template-columns: 1fr 1fr;
+	}
+
+	header #logo {
+		grid-row: 1;
+		max-height: 30vh;
+		object-fit: contain;
+	}
 }
