--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@
 }
 
 .roboto {
-	font-family: 'Sarabun', sans-serif;
+	font-family: 'Roboto', sans-serif;
 }
 
 /* base */
@@ -16,6 +16,7 @@ body {
 .container {
 	max-width: 1200px;
 	width: 100%;
+	margin: 0 auto;
 }
 
 /* header */
@@ -110,6 +111,50 @@ nav a {
 
 nav .fa {
 	font-size: 1.4em;
+}
+
+/*
+	main
+*/
+main {
+	background: #263A5E;
+	color: white;
+	display: grid;
+}
+
+main aside {
+	display: flex;
+	align-items: center;
+} 
+
+main article h1 {
+	margin-top: 0;
+	font-size: 2em;
+}
+
+main article p {
+	font-size: 1.5em;
+	line-height: 1.6em;
+	text-justify: newspaper;
+	text-align: justify;
+}
+
+main article p:first-of-type:before, main article p:last-of-type:after {
+	content: "//";
+	color: silver;
+}
+
+/*
+	about us
+*/
+#about > .container {
+	display: grid;
+	grid-template-columns: 1fr 1fr;
+	gap: 2em;
+}
+
+#about > .container img {
+	width: 100%;
 }
 
 @media only screen and (max-width: 800px) {
