--- a/css/style.css
+++ b/css/style.css
@@ -127,7 +127,7 @@ main aside {
 	align-items: center;
 } 
 
-main article h1 {
+main h1 {
 	margin-top: 0;
 	font-size: 2em;
 }
@@ -139,9 +139,8 @@ main article p {
 	text-align: justify;
 }
 
-main article p:first-of-type:before, main article p:last-of-type:after {
-	content: "//";
-	color: silver;
+main section {
+	margin-bottom: 4em;
 }
 
 /*
@@ -156,6 +155,45 @@ main article p:first-of-type:before, main article p:last-of-type:after {
 #about > .container img {
 	width: 100%;
 }
+
+#about article p:first-of-type:before, #about article p:last-of-type:after {
+	content: "//";
+	color: silver;
+}
+
+/*
+	faq
+*/
+#faq article {
+	display: flex;
+	flex-wrap: wrap;
+}
+
+#card {
+	flex: 1;
+	background: white;
+	border-radius: 2em;
+	min-width: 20em;
+	color: #606060;
+	margin: 1em;
+	padding: 2em 1em 1em 1em;
+	text-align: center;
+}
+
+#card img {
+	height: 3em;
+}
+
+#card h4 {
+	font-weight: bold;
+	font-size: 1.25em;
+}
+
+#card p {
+	font-size: 1em;
+	text-align: center;
+}
+
 
 @media only screen and (max-width: 800px) {
 	header > .container {
