--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,19 @@ body {
 	margin: 0 auto;
 }
 
+.highlight-button {
+	background: #3AE088;
+	padding: 0.5em 2em;
+	border: 0.2em solid #A2FBCC;
+	border-radius: 4em;
+	font-weight: bold;
+	box-shadow: 0px 0px 0.5em #A2FBCC;
+	color: white;
+	font-size: 1.2em;
+	text-decoration: none;
+	text-transform: uppercase;
+}
+
 /* header */
 header {
   min-height: 100vh;
@@ -60,15 +73,6 @@ header .buttons > a {
 	text-decoration: none;
 	font-weight: bold;
 	font-size: 1.2em;
-}
-
-header .start-button {
-	background: #3AE088;
-	padding: 0.5em 2em;
-	border: 0.2em solid #A2FBCC;
-	border-radius: 4em;
-	font-weight: bold;
-	box-shadow: 0px 0px 0.5em #A2FBCC;
 }
 
 header #logo {
@@ -200,6 +204,45 @@ main section {
 
 .card p {
 	font-size: 1em;
+	text-align: center;
+}
+
+/* last year */
+#lastYear {
+	background: linear-gradient(#588b5c, #fc7070);
+}
+
+#lastYear h1 {
+	margin-bottom: 0;
+	color: #3fce7f;
+	text-shadow: 0 0.1em 0.5em rgba(0, 0, 0, 0.6);
+}
+
+#lastYear #awesome {
+	color: white;
+	margin: 0 0.25em;
+}
+
+#lastYear .subtitle {
+	margin-top: 1em;
+	font-size: 1.25em;
+}
+
+#lastYear article {
+	display: grid;
+	grid-template-columns: 1fr 1fr 1fr 1fr;
+	gap: 1.2em;
+	margin: 4em 0;
+}
+
+#lastYear article img {
+	width: 100%;
+	border: 4px solid #A2FBCC;
+	box-shadow: 0px 0px 1em #A2FBCC;
+	margin-bottom: 1em;
+}
+
+#lastYear .centered {
 	text-align: center;
 }
 
