--- a/css/style.css
+++ b/css/style.css
@@ -239,7 +239,7 @@ main section {
 	width: 100%;
 	border: 4px solid #A2FBCC;
 	box-shadow: 0px 0px 1em #A2FBCC;
-	margin-bottom: 1em;
+	margin: 0 -8px 1em -8px;
 }
 
 #lastYear .centered {
@@ -309,6 +309,24 @@ footer ul li:not(:last-child) {
 
 footer #email {
 	color: white;
+}
+
+@media only screen and (max-width: 1300px) {
+	#lastYear article {
+		grid-template-columns: 1fr 1fr 1fr;
+	}
+}
+
+@media only screen and (max-width: 800px) {
+	#lastYear article {
+		grid-template-columns: 1fr 1fr;
+	}
+}
+
+@media only screen and (max-width: 600px) {
+	#lastYear article {
+		grid-template-columns: 1fr;
+	}
 }
 
 @media only screen and (max-width: 800px) {
