--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,10 @@
 	font-family: 'Roboto', sans-serif;
 }
 
+html {
+	scroll-behavior: smooth;
+}
+
 /* base */
 body {
 	margin: 0;
@@ -101,6 +105,7 @@ nav span {
 nav ul {
 	list-style: none;
 	padding: 0;
+	margin: 0;
 	float: right;
 }
 
@@ -146,7 +151,7 @@ main article p {
 }
 
 main section {
-	padding-bottom: 4em;
+	padding-top: 5em;
 }
 
 /*
@@ -242,6 +247,7 @@ main section {
 
 #lastYear .centered {
 	text-align: center;
+	margin-bottom: 3rem;
 }
 
 /* sponsors */
