--- a/css/style.css
+++ b/css/style.css
@@ -37,6 +37,15 @@ body {
 	text-transform: uppercase;
 }
 
+.lightened {
+	color: rgba(255, 255, 255, 0.8);
+}
+
+.shadow {
+	font-weight: bold;
+	text-shadow: 0 0 0.5em rgba(0, 0, 0, 0.8);
+}
+
 /* header */
 header {
   min-height: 100vh;
