--- a/css/style.css
+++ b/css/style.css
@@ -268,7 +268,7 @@ main section {
 #medals {
 	margin-top: 5em;
 	display: grid;
-	grid-template-columns: 1fr 1fr 1fr;
+	grid-template-columns: 1fr 1fr;
 }
 
 #medals > div {
